// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar component renders a progress bar using default props 1`] = `
.sx60u3a {
  border-radius: var(--sx-radii-round);
  height: var(--sx-space-3);
  position: relative;
  overflow: hidden;
  width: 100%;
}

.sx60u3aw1dws--c2 {
  border: 1px solid var(--sx-colors-tonal200);
  background: white;
  color: var(--sx-colors-primary);
}

.sxypqsd {
  box-sizing: border-box;
  position: absolute;
  background-color: currentcolor;
  height: 100%;
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="sx60u3a sx60u3a03kze--appearance-outline sx60u3a03kze--theme-primary sx60u3aw1dws--c2"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="sxypqsd"
      data-max="100"
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;

exports[`ProgressBar component renders a solid progress bar 1`] = `
.sx60u3a {
  border-radius: var(--sx-radii-round);
  height: var(--sx-space-3);
  position: relative;
  overflow: hidden;
  width: 100%;
}

.sx60u3aw1dws--c2 {
  border: 1px solid var(--sx-colors-tonal200);
  background: white;
  color: var(--sx-colors-primary);
}

.sx60u3aqi1kd--c2 {
  border: 1px solid var(--sx-colors-tonal200);
  background: white;
  color: var(--sx-colors-secondary);
}

.sx60u3a27nrs--c2 {
  background: var(--sx-colors-tonal100);
  color: var(--sx-colors-primary);
}

.sxypqsd {
  box-sizing: border-box;
  position: absolute;
  background-color: currentcolor;
  height: 100%;
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="sx60u3a sx60u3a03kze--appearance-solid sx60u3a03kze--theme-primary sx60u3a27nrs--c2"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="sxypqsd"
      data-max="100"
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;
